--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </table>
       </div>
      </div>
-     <script src="Thicuoiki.js"></script>
+     <script src="./js/Thicuoiki.js"></script>
 </body>
   
 </html>
